Updated design and functional for the web app

--- a/web-app/src/styles/main.scss
+++ b/web-app/src/styles/main.scss
@@ -1,26 +1,162 @@
+@font-face {
+  font-family: "Poppins";
+  src: local("Poppins"), url(../fonts/Poppins-Regular.otf);
+}
+
+// Define variables for breakpoints
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 992px;
+$large-desktop: 1200px;
+
+// Use media queries with mixins
+@mixin mobile {
+  @media only screen and (max-width: #{$mobile}) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media only screen and (min-width: #{$mobile + 1}) and (max-width: #{$tablet}) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media only screen and (min-width: #{$tablet + 1}) and (max-width: #{$desktop}) {
+    @content;
+  }
+}
+
+@mixin large-desktop {
+  @media only screen and (min-width: #{$desktop + 1}) and (max-width: #{$large-desktop}) {
+    @content;
+  }
+}
+
 .App {
-  background-color: #eee;
-  min-height: 100vh;
+  font-family: Poppins;
   display: flex;
-  justify-content: center;
-  align-content: center;
+  min-height: 100%;
+  width: 100%;
+  height: auto;
+  background-image: url("../images/bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  text-align: center;
+
+  @include mobile {
+    font-size: 12px;
+  }
+
+  @include tablet {
+    font-size: 14px;
+  }
+
+  @include desktop {
+    font-size: 16px;
+  }
+
+  @include large-desktop {
+    font-size: 20px;
+  }
 }
 
 .page {
-  width: 600px;
-  max-width: 100%;
+  width: 40%;
+  min-width: 300px;
   margin: 0 auto;
-  min-height: 100vh;
+  height: 30rem;
   padding: 2rem;
+  align-self: center;
   background: #fff;
+  box-shadow: 0px 0px 20px rgba(11, 113, 145, 0.15);
+  border-radius: 10px;
+  position: relative; /* Make the container a positioning context for the child div */
+
+  &-body {
+    font-weight: 500;
+  }
+
+  &-title-questionaire {
+    height: 10%;
+
+    letter-spacing: 0.005em;
+    font-size: 0.7rem;
+    display: flex;
+    gap: 10px;
+    align-self: center;
+    align-items: center;
+
+    & h1 {
+      text-align: left;
+      flex: 9;
+    }
+
+    & h3 {
+      flex: 2.5;
+      text-align: right;
+    }
+
+    & img {
+      flex: 0.5;
+      width: 3em;
+      height: 3em;
+    }
+  }
+
+  &-body-questionaire {
+    font-size: 0.9rem;
+    height: 70%;
+    & h1 {
+      align-self: center;
+    }
+  }
+
+  &-control-questionaire {
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    font-weight: 600;
+
+    & button {
+      color: #fff;
+      font: inherit;
+      word-spacing: 5px; /* Set the space between words to 5 pixels */
+
+      align-self: center;
+      padding: 10px 31px 10px 31px;
+      border-radius: 8px;
+
+      border: none;
+    }
+  }
 
   &-title h1 {
     text-align: center;
+    font-weight: 600;
   }
 
   &-control {
+    height: 20%;
     display: flex;
     justify-content: center;
-    margin-top: 2rem;
+    color: #085696;
+
+    & button {
+      background: none;
+      border: none;
+      color: inherit;
+      font-weight: 600;
+      font-size: 1.5rem;
+      line-height: 52px;
+      letter-spacing: -0.04em;
+      text-underline-offset: 8px;
+    }
   }
 }
